main.css
* {
    font-family: 'Roboto Condensed', sans-serif;
    color: white;
}

body {
    background-color: black;
    overflow: hidden;
    height: 100vh;
    width: 100vw;
    display: grid;
    align-items: center;
    margin: 0;
    padding: 0;
}

#bg {
    /* background-image: url('default.png'); */
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    
    
    height: 101vh;
    width: 101vw;
    margin: -5px -10px -10px -5px;
    
    top: 0;
    left: 0;
    overflow: hidden;
    position: absolute;

    filter: blur(5px) brightness(50%);
    opacity: 0;
    z-index: -1;
}

#content {
    opacity: 0;
    height: 100vh;
}

#contentGrid {
    text-align: center;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(5, 1fr); 
    align-items: center;
    justify-items: stretch;
    align-content: stretch;
    height: 100vh;
    width: 100vw;
}

#weather {
    display: block;
    grid-column-start: 2;
    justify-self: center;
    max-height: 3rem;
    background-color: rgba(255, 255, 255, 0.164);
    border-radius: 30px;
    padding: 0 0.5rem 0 0.5rem;
}

#greeting {
    grid-column-start: 2;
    font-size: 0.8rem;
}

#dt{
    grid-column-start: 2;
    text-align: center;
}

#temp {
    font-size: 1.2rem;
    display: inline;
}

#weather_icon {
    max-height: inherit;
    vertical-align: middle;
}

#time {
    font-size: 5.5rem;
    font-family: 'Oswald', sans-serif;
}

#outgoing {
    grid-column-start: 2;
    text-align: center;
    align-items: center;
    width: 50vw;
    height: 200px;
}

#searchBar {
    width: 80%;
    margin: 0 auto 1rem auto;
}

#query {
    background-color: rgba(0, 0, 0, 0);
    width: 100%;
    font-size: 2rem;
    border: none;
    border-bottom: 1pt solid;
    outline: none;
    text-align: center;
}

#credit {
    font-size: 0.6rem;
    opacity: 20%;  
    text-decoration: none;
}

#credit:hover {
    opacity: 60%;
}

footer {
    text-align: right;
    grid-area: 5 / 3 / end / last-line;
    align-self: end;
    padding-right: 5px;
}

ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

li {
    display: inline;
}

li > a {
    text-decoration: none;
    opacity: 70%;
}

li > a:hover {
    opacity: 100%;
}

